# opencv_practice

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Project_01_Real_Time_Filtering/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  random_code.txt  saved_video_original.avi
Project_01_Real_Time_Filtering/include/: filter.h
Project_01_Real_Time_Filtering/src/: filter.cpp  imgDisplay.cpp  read_image.py  vidDisplay.cpp
Project_01_Real_Time_Filtering_copy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  saved_video_grey.avi
Project_01_Real_Time_Filtering_copy/src/: filter.cpp  vidDisplay.cpp
Project_02_Content_Based_Image_Retrieval/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Project_02_Content_Based_Image_Retrieval/include/: csv_util.h  filter.h
Project_02_Content_Based_Image_Retrieval/src/: filter.cpp  read_feature_vector.cpp  write_feature_vector.cpp
Project_02_Content_Based_Image_Retrieval/to_upload/: 1.csv  CMakeLists.txt  README.md  csv_util.cpp  read_feature_vector.cpp
Project_03_Real_Time_Object_2D_Recognition/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  distance_metric_comparison.ods
Project_03_Real_Time_Object_2D_Recognition/include/: filter.h  helper_functions.h  modes.h
Project_03_Real_Time_Object_2D_Recognition/src/: binProcess.cpp  filter.cpp  helper_functions.cpp  modes.cpp  sample_code.cpp
Project_03_Real_Time_Object_2D_Recognition/to_upload/: README.md  binProcess.cpp  filter.cpp  filter.h  helper_functions.cpp  helper_functions.h  modes.cpp
Project_04_Calibration_and_Augmented_Reality/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aruco_markers.odt  cmake_install.cmake
Project_04_Calibration_and_Augmented_Reality/include/: filter.h  helper_functions.h  modes.h
Project_04_Calibration_and_Augmented_Reality/src/: calibAR.cpp  harrisCornerDetector.cpp  helper_functions.cpp  modes.cpp
Project_04_Calibration_and_Augmented_Reality/to_upload/: calibAR.cpp  filter.cpp  modes.cpp  modes.h  skanda_cam_moving_calibparam.yaml
Project_05_Recognition_using_Deep_Networks/: helper.py  mnist_model.py  mnist_model_1A_1E.py  mnist_model_1F.py  mnist_model_1F_1G.py  mnist_model_2.py  mnist_model_3_greek.py  mnist_model_4.py  mnist_model_ext1.py  my_class.py  network_combinations.ods  network_output.txt  script_output.txt
Project_05_Recognition_using_Deep_Networks/results/: model.pth  model_1A_1E.pth  model_1A_1E_epoch_3.pth  model_greek.pth  optimizer.pth  optimizer_1A_1E.pth  optimizer_1A_1E_epoch_3.pth  optimizer_greek.pth
Project_05_Recognition_using_Deep_Networks/to_upload/: README.md  mnist_model_1A_1E.py  mnist_model_1F_1G.py  mnist_model_4.py  mnist_model_ext1.py
read_camera/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
read_camera/src/: main.cpp
read_image/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
read_image/src/: read_image.cpp
src/: read_image.cpp
